# itacart

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/itacart/: __init__.py
src/itacart.egg-info/: PKG-INFO
