[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "itacart"
version = "0.1.0a1"
authors = [
  { name="ITACaRT", email="itacart@proton.me" },
]
description = "An Equal-Area Parallelogram DGGS for Terrestrial Cadastral Mapping-Designed for Usability and Blockchain Integration."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "LICENSE"}
keywords = ["dggs", "gis", "geospatial", "cadastre", "blockchain", "sdi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
]